--- a/sonar-rule-logger-preference/pom.xml
+++ b/sonar-rule-logger-preference/pom.xml
@@ -48,6 +48,11 @@
     <build>
         <plugins>
             <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>sonar-maven-plugin</artifactId>
+                <version>2.5</version>
+            </plugin>
+            <plugin>
                 <groupId>org.codehaus.sonar</groupId>
                 <artifactId>sonar-packaging-maven-plugin</artifactId>
                 <version>1.12.1</version>
