--- a/sonar-rule-logger-preference/pom.xml
+++ b/sonar-rule-logger-preference/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>pl.vgtworld</groupId>
     <artifactId>sonar-rule-logger-preference</artifactId>
-    <version>1.0</version>
+    <version>1.1.0-SNAPSHOT</version>
     <packaging>sonar-plugin</packaging>
 
     <name>Sonar custom rule - Avoid logger from java.util.logging package</name>
